# sandbox

machine_learning/: CMakeLists.txt  package.xml
machine_learning/include/machine_learning/classifier/: classifier.h  gmm_classifier.h
machine_learning/include/machine_learning/ml/: gmm.h  matlabinterface.h  matlabinterface_tmp.h  ml.h  ml.h~  (+2 more)
machine_learning/launch/: classifier.launch  classifier.launch~
machine_learning/src/: test.cpp
machine_learning/src/classifier/: classifier.cpp  gmm_classifier.cpp
machine_learning/src/ml/: gmm.cpp  gmm.cpp~  matlabinterface.cpp  matlabinterface.cpp~  ml.cpp  ml.cpp~  svm.cpp  svm.cpp~  svminterface.cpp  svminterface.cpp~
machine_learning/src/node/: classifier_interface.cpp  classifier_node.cpp  topic_publisher.cpp
pioneer3at/config/rviz/: rviz_settings.rviz
pioneer3at/pioneer3at_control/: CMakeLists.txt  package.xml
pioneer3at/pioneer3at_description/: CMakeLists.txt  package.xml
pioneer3at/pioneer3at_description/launch/: pioneer3at_rviz.launch
pioneer3at/pioneer3at_description/urdf/: pioneer3at.gazebo  pioneer3at.gv  pioneer3at.urdf  pioneer3at.xacro  pioneer3at_material.xacro  pioneer3at_tmp2.xacro
pioneer3at/pioneer3at_gazebo/: CMakeLists.txt  package.xml
pioneer3at/pioneer3at_gazebo/launch/: pioneer3at_world (copy).launch  pioneer3at_world.launch
pioneer3at/pioneer3at_gazebo/worlds/: wg_world.sdf
statistics_test/: CMakeLists.txt  package.xml
statistics_test/launch/: statistics_test.launch  statistics_test.launch~  stats_test_rviz.rviz
statistics_test/src/: meanshift_test.cpp  wkmeans_node.cpp
(+2 files in other folders)
